--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 <div class="navbar animated-navbar" style="background-image: url('{{ url_for('static', filename='images/background-pattern.png') }}'); background-size: cover; background-repeat: no-repeat; background-position: center; background-color: #222; padding: 20px 40px; color: #fff; display: flex; align-items: center; justify-content: space-between; border-radius: 8px;">
     <div style="display: flex; align-items: center; gap: 20px;">
 {#        <a href="{{ url_for('house.house_list') }}" style="font-size: 1.8rem; font-weight: bold; color: #fff; text-decoration: none; writing-mode: horizontal-tb;">乐居阁</a>#}
-    <a href="{{ url_for('house.house_list') }}" >乐居阁</a>
+    <a href="{{ url_for('house.house_list') }}" class="house-link">乐居阁</a>
         <select name="region" id="provinceSelect" onchange="updateCities();" style="padding: 8px 12px; border-radius: 6px; border: 1px solid #ccc; background-color: rgba(255, 255, 255, 0.8); color: #333; outline: none; font-size: 1rem;">
             <option value="">选择省份</option>
             {% for province in cities_data.keys() %}
